Fix for check button high contrast

--- a/packages/office-ui-fabric-react/src/components/Check/Check.scss
+++ b/packages/office-ui-fabric-react/src/components/Check/Check.scss
@@ -16,6 +16,8 @@ $checkBoxHeight: 24px;
   vertical-align: top;
   position: relative;
   @include ms-user-select(none);
+  background: $ms-color-white;
+  border-radius: $checkBoxHeight;
 }
 
 .root:hover,
@@ -24,7 +26,6 @@ $checkBoxHeight: 24px;
   opacity: 1;
 }
 
-.background,
 .circle,
 .check {
   position: absolute;
@@ -36,12 +37,10 @@ $checkBoxHeight: 24px;
   font-size: $checkBoxHeight;
 }
 
-.background {
-  color: $ms-color-white;
-}
-
-.rootIsChecked .background {
-  color: $ms-color-themePrimary;
+.rootIsChecked {
+  &.root {
+    background: $ms-color-themePrimary;
+  }
 }
 
 .circle {
